# cookiecutter-python

./: .readthedocs.yml  CONTRIBUTING.md  README.md  cookiecutter.json  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  docs.yml  pre-commit.yml  release.yml  tests.yml  update-instance.yml
docs/: conf.py  guide.md  index.md  quickstart.md  requirements.txt
tools/: dependencies-table.py
{{cookiecutter.project_name}}/: README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: labeler.yml  release.yml  tests.yml
