[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "{{cookiecutter.license}}"}
authors = [
  {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"},
]
classifiers = [
  "{{cookiecutter.development_status}}",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
Repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}

[tool.setuptools.packages.find]
where = ["src"]
{% endif -%}

[tool.uv]
python = "3.9"

[tool.uv.dependencies]
click = ">=8.0.1"

[tool.uv.dev-dependencies]
coverage = {extras = ["toml"], version = ">=6.2"}
furo = ">=2021.11.12"
mypy = ">=0.930"
myst-parser = ">=0.16.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pydoclint = "^0.4.1"
pytest = ">=6.2.5"
ruff = ">=0.4.6"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=6.0.0"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
Pygments = ">=2.10.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "C90",  # mccabe
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "RUF",  # Ruff-specific rules
  "S",    # flake8-bandit
  "UP",   # pyupgrade
  "W",    # pycodestyle
]
ignore = [
  "COM812",
  "COM819",
  "D107",  # undocumented-public-init conflicts with DOC301
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"noxfile.py" = ["S101"]
"**/conftest.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.nox'
arg-type-hints-in-docstring = false
